# Heart-Disease-Detection

./: .dockerignore  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  retrain_model.py  setup.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: app-checkpoint.py  charts-checkpoint.ipynb  explain-checkpoint.py  heart_disease-checkpoint.ipynb  pdf-checkpoint.py  reports-checkpoint.py
docs/: index.md
models/: scaler.pkl
src/utils/: charts.py  explain.py  report.py
src/utils/.ipynb_checkpoints/: __init__-checkpoint.py
tests/: conftest.py  test_app.py  test_charts.py  test_explain.py  test_report.py
